Gaps and margins fixed
Fixed large gap between tablel and detail panels on mobile (when
stacked)

Added padding to pageWrapper to avoid elements at the bottom of the
page from appearing underneath the footer.

General fixed to padding and margins to make element alignment more
consistent.

--- a/webapp/app/styles/themes/main.scss
+++ b/webapp/app/styles/themes/main.scss
@@ -16,6 +16,10 @@ body,
   margin-right: auto;
 }
 
+.section-content {
+  margin-top: 15px;
+}
+
 body {
   background: url($background-image-url) center 100px no-repeat #ffffff;
   background-size: 100% auto;
@@ -108,14 +112,13 @@ li {
 /* Index */
 
 .section {
-  padding-right: 15px;
+  /*padding-right: 15px;*/
 }
 
 .section-north {
   min-height: 74px;
   border: 1px solid #fff;
   border-bottom: 1px solid #e7e7e7;
-  width: 99%;
 }
 
 #page-wrapper {
@@ -132,7 +135,7 @@ li {
   /*Disabled scroll*/
   /*border-right: 1px solid #e7e7e7;*/
   /*overflow-y: scroll;*/
-  height: 100%;
+  /* height: 100%; */
 }
 
 .col-left {
@@ -143,10 +146,12 @@ li {
 
 .section-main,
 .section-detail {
+/*
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 15px;
   height: 568px;
+*/
 }
 
 .section-row {
@@ -1855,7 +1860,7 @@ textarea#procedureNotes {
 }
 
 .section-detail .btn-info {
-  margin-right: 20px;
+  margin-left: 20px;
   margin-top: 20px;
 }
 
@@ -1885,7 +1890,6 @@ div.transbox {
   opacity: 0.7;
   filter: alpha(opacity=70);
   color: #000000;
-  margin-right: 5%;
 }
 
 div.transbox .innerTransbox {
@@ -1893,6 +1897,16 @@ div.transbox .innerTransbox {
   padding-left: 20px;
   padding-bottom: 15px;
 }
+
+  /* disable transbox padding on mobeile to aline when stacked
+   */
+  
+  @media (min-width: 768px) {
+    div.transbox .innerTransbox {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 
 td.dateTime {
   width: 130px;
